# TaskWise

./: README.md  markdown.md
backend/: .env.example  .gitignore  README.md  ROUTES.md  pyproject.toml
backend/src/: admin_schemas.py  config.py  database.py  dependencies.py  exceptions.py  main.py  seed.py
backend/src/announcements/: models.py  router.py  service.py
backend/src/assets/: router.py
backend/src/attachments/: router.py
backend/src/attendance/: models.py  router.py  router_teacher.py  schemas.py  service.py  service_teacher.py
backend/src/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/courses/: models.py  router.py  schemas.py  service.py
backend/src/geofence/: models.py  router.py  schemas.py  service.py
backend/src/schedules/: models.py
backend/src/tasks/: models.py  router.py  schemas.py  service.py
backend/src/users/: router.py  schemas.py  service.py
backend/tests/: conftest.py
backend/tests/announcements/: test_announcements.py
backend/tests/attachments/: test_attachments.py
backend/tests/attendance/: test_attendance.py
backend/tests/auth/: test_auth.py
backend/tests/courses/: test_courses.py
backend/tests/tasks/: test_tasks.py
backend/tests/users/: test_users.py
frontend/: .env.example  .gitignore  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  LoadingSpinner.tsx  RingProgress.tsx  SearchBar.tsx  Sidebar.tsx  TopNavigation.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/services/: api.ts  (+2 more)
(+39 files in other folders)
